force-app/main/default/objects/Account/fields/Active_NDA__c.field-meta.xml
<CustomField>
    <fullName>Active_NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active NDA</label>
    <type>Checkbox</type>
</CustomField>