force-app/main/default/objects/Account/fields/Active_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Subscription</label>
    <type>Checkbox</type>
</CustomField>