force-app/main/default/objects/Account/fields/Assigned_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Account_Manager__c</fullName>
    <label>Assigned Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mike Stäcker</fullName>
            </value>
            <value>
                <fullName>Felix Huber</fullName>
            </value>
            <value>
                <fullName>No AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>