force-app/main/default/objects/Account/fields/Assigned_Account_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Account_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Account Responsible</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Division</field>
            <operation>contains</operation>
            <value>Success</value>
        </filterItems>
        <filterItems>
            <field>User.Alias</field>
            <operation>equals</operation>
            <value>Nici</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>