force-app/main/default/objects/Account/fields/Assigned_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Success_Manager__c</fullName>
    <label>Assigned Success Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Philipp Suter</fullName>
            </value>
            <value>
                <fullName>Anja Ott</fullName>
            </value>
            <value>
                <fullName>Rune Heyden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>