force-app/main/default/objects/Account/fields/Cost_per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Lead__c</fullName>
    <label>Cost per Lead</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>