force-app/main/default/objects/Account/fields/Digital_Marketing_Spend__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Spend__c</fullName>
    <label>Digital Marketing Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>