force-app/main/default/objects/Account/fields/Framework_2_0_access__c.field-meta.xml
<CustomField>
    <fullName>Framework_2_0_access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Framework 2.0 access</label>
    <type>Checkbox</type>
</CustomField>