force-app/main/default/objects/Account/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <label>Headcount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Headcount</valueSetName>
    </valueSet>
</CustomField>