force-app/main/default/objects/Account/fields/Industry1__c.field-meta.xml
<CustomField>
    <fullName>Industry1__c</fullName>
    <label>Industry1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_2_0</valueSetName>
    </valueSet>
</CustomField>