force-app/main/default/objects/Account/fields/Industry_Group1__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group1__c</fullName>
    <label>Industry Group1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industry_Group_2_0</valueSetName>
    </valueSet>
</CustomField>