force-app/main/default/objects/Account/fields/License_Package__c.field-meta.xml
<CustomField>
    <fullName>License_Package__c</fullName>
    <label>License Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>