force-app/main/default/objects/Account/fields/New_Industry__c.field-meta.xml
<CustomField>
    <fullName>New_Industry__c</fullName>
    <label>New Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>