force-app/main/default/objects/Account/fields/Open_for_BDR_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Open_for_BDR_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>States if the Account can be prospected by the BDR/SDR Team</inlineHelpText>
    <label>Open for BDR Engagement?</label>
    <type>Checkbox</type>
</CustomField>