force-app/main/default/objects/Account/fields/Size_of_the_marketing_team__c.field-meta.xml
<CustomField>
    <fullName>Size_of_the_marketing_team__c</fullName>
    <label>Size of the marketing team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3</fullName>
            </value>
            <value>
                <fullName>4-8</fullName>
            </value>
            <value>
                <fullName>9-15</fullName>
            </value>
            <value>
                <fullName>15+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>