force-app/main/default/objects/Account/fields/Sub_Industry1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry1__c</fullName>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Industry_2_0</valueSetName>
    </valueSet>
</CustomField>