force-app/main/default/objects/Account/fields/Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Success_Manager__c</fullName>
    <label>Success Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>