force-app/main/default/objects/Account/fields/Total_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR_Amount__c</fullName>
    <label>Total ARR Amount</label>
    <summarizedField>Opportunity.ARR_Amount__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>