force-app/main/default/objects/Account/fields/Total_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Revenue__c</fullName>
    <label>Total Expected Revenue</label>
    <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>