force-app/main/default/objects/Account/fields/Typ__c.field-meta.xml
<CustomField>
    <fullName>Typ__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Add-on/Services</fullName>
            </value>
            <value>
                <fullName>Proof of Value</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>