force-app/main/default/objects/Account/validationRules/Billing_City_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_City_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(BillingCity)</errorConditionFormula>
    <errorMessage>Billing City is a required field. Please enter a value before saving the account</errorMessage>
</ValidationRule>